--- a/src/jades/pages/screen_good.jade
+++ b/src/jades/pages/screen_good.jade
@@ -33,7 +33,7 @@ block content
           .input-group.input-group-lg
             input.form-control(type="search", placeholder="Search by ingredient or name...")
             .input-group-btn
-              button.btn.btn-primary Seach
+              button.btn.btn-primary Search
   hr
   .container
     .row
