--- a/src/jades/pages/screen_bad.jade
+++ b/src/jades/pages/screen_bad.jade
@@ -33,7 +33,7 @@ block content
             .input-group.input-group-lg
               input.form-control(type="search")
               .input-group-btn
-                button.btn.btn-primary Seach
+                button.btn.btn-primary Search
         .col-xs-12.col-md-6
           h3 Subscribe to the Newsletter
           p Get the best recipies every week.
